# Scaffold

./: LICENSE  README.md  models.py  parser.py  pyproject.toml  test.py  tree_printer.py  txt.txt
docs/: architecture_info.txt
scaffold/: __init__.py  builder.py  facade.py  models.py  parser.py  tree_printer.py  writer.py
tests/: test.py
