[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffold"
version = "1.0.0"
description = "Generate project directory structures from an indented text description."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Divyanshu Srivastava" }
]

keywords = [
    "filesystem",
    "directory",
    "tree",
    "generator",
    "scaffold",
    "automation"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]